--- a/cadastrolivro.html
+++ b/cadastrolivro.html
@@ -23,16 +23,29 @@
 </head>
 
 <body>
-    <header>
-        <a href="index.html" class="logo">DOM</a>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">weCare</a>
+
+            <form class="d-flex mx-auto">
+                <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+            </form>
+
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="login.html"><i class="bi bi-person"></i> Login</a>
+            </div>
+        </div>
+    </nav>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="itens.html">Itens</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
             <li><a href="cadastrolivro.html">Cadastro</a></li>
+
         </ul>
     </nav>
-    <main>
         <div class="container mt-5">
             <h1 class="mb-4">Cadastro de livro</h1>
             <form  name="livro" id="livro">
