--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <main>
         <body>
             <div class="container">
-              <h1 class="text-center">weCare: o smartwatch que cuida de quem você ama</h1>
+              <h1 class="text-center home">weCare: o smartwatch que cuida de quem você ama</h1>
               <p class="lead text-center">weCare é um smartwatch com monitoramento com foco para pessoas idosas, que permite que você acompanhe a saúde e o bem-estar do seu familiar a distância.</p>
               <div class="row">
                 <div class="col-md-6">
                   <img src="images/presente.jpeg" alt="Pai presenteando um filho com um relógio de nossa marca" class="img-fluid">
                 </div>
                 <div class="col-md-6">
-                  <h2>Como funciona?</h2>
+                  <h2 class="home">Como funciona?</h2>
                   <p>weCare é um smartwatch que mede os batimentos cardíacos, a qualidade do sono, a localização e outros dados vitais do seu familiar idoso. Esses dados são enviados para o seu smartphone através de um aplicativo, que também possui um assistente para caso de riscos.</p>
                   <p>Por exemplo, se o weCare detectar um aumento drástico de frequência cardíaca, ele pode emitir uma ligação ou notificação para você, alertando sobre uma possível emergência. Você também pode conversar com o seu familiar pelo weCare, usando o microfone e o alto-falante integrados.</p>
                   <p>Além disso, o weCare possui um design moderno e confortável, com uma tela sensível ao toque e uma bateria de longa duração. O weCare é resistente à água e ao suor, podendo ser usado em qualquer situação.</p>
@@ -70,7 +70,7 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <h2>Por que escolher o weCare?</h2>
+                  <h2 class="home">Por que escolher o weCare?</h2>
                   <ul>
                     <li>O weCare é mais do que um smartwatch, é um dispositivo que cuida de quem você ama. Com o weCare, você pode:</li>
                     <li>Acompanhar a saúde e o bem-estar do seu familiar idoso a distância, recebendo dados em tempo real.</li>
