--- a/sobre.html
+++ b/sobre.html
@@ -46,7 +46,7 @@
         <div class="row pt-5">
             <div class="col-4">
                 <h3>Antônio Carlos Rezende Filho</h3>
-                <h5>111BSI2222</h5>
+                <h5>11721BSI250</h5>
             </div>
             <div class="col-4">
                 <h3>Carlos Augusto Dantas Marquez</h3>
@@ -62,9 +62,21 @@
             <div>
                 <h4 class="pt-5 text-center">Matéria: Programação para internet - Professor: Rafael Dias Araújo - Universidade Federal de Uberlândia</h4>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                  Carlos
+                </div>
+                <div class="card-body">
+                  <blockquote class="blockquote mb-0">
+                    <p> Nos colocamos em prática os conceitos que vimos durante as aulas. É bacana fazer este tipo de trabalho para pensar com a cabeça do usuario a fim de fazer uma interface que traga uma boa experiência aos clientes. Também é legal para o grupo aprender a se organizar com seus compromissos, utilizamos Teams para as reuniões, WhatsApp para marcá-las, trello para se organizar em relação às atividades e GitHub para controle de versões.</p>
+                    <footer class="blockquote-footer">Foi um trabalho bem bacana de se fazer!!</footer>
+                  </blockquote>
+                </div>
+              </div>
     
             <div>
-                <h5 class="pt-5 text-center">Foi um trabalho bem bacana de se fazer, colocando em prática os conceitos que vimos durante as aulas. É bacana fazer este tipo de trabalho para pensar com a cabeça do usuario a fim de fazer uma interface que traga uma boa experiência aos clientes. Também é legal para o grupo aprender a se organizar com seus compromissos, utilizamos Teams para as reuniões, WhatsApp para marcá-las, trello para se organizar em relação às atividades e GitHub para controle de versões.</h5>
+                <h5 class="pt-5 text-center"></h5>
             </div>
         </div>
         
