--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="itens.html">Itens</a></li>
         <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="cadastrolivro.html">Cadastro</a></li>
+        <li><a href="cadastro.html">Cadastro</a></li>
       </ul>
     </nav>
   </header>
