--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
                     <div class="col-md-7 login-container"></div>
                     <div class="col-md-5">
                         <div class="login-form">
-                            <form>
+                            <form action="private/profile.html">
                                 <fieldset" style="color: green;">Login</fieldset>
                                 <div class="form-floating mb-3 ">
                                     <input type="text" class="form-control" name="email" id="email" placeholder="">
@@ -51,7 +51,7 @@
                                     <input type="password" class="form-control" name="password" id="password" placeholder="">
                                     <label for="password" style="color: green;">Senha</label>
                                 </div>                    
-                                <button type="submit" id="login"  class="btn btn-success col-5">Entrar</button>
+                                <button type="submit" id="login" class="btn btn-success col-5">Entrar</button>
                                 <div>
                                     <a class="text-allign" href="cadastro.html" style="color: green;">Não possui cadastro?</a>
                                 </div>
