--- a/private/profile.html
+++ b/private/profile.html
@@ -72,8 +72,10 @@
 
         <div class="d-flex justify-content-between">
 
-          <div class="col-lg-6">
-            <img src="../images/no-picture-profile.jpeg" alt="Foto de Perfil" width="350 px">
+          <div class="col-lg">
+
+            <img src="../images/no-picture-profile.jpeg" alt="Foto de Perfil" width="300px">
+
             <div class="">
               <h3 class="text-center">Painel de Controle</h3>
             </div>
