--- a/itens.html
+++ b/itens.html
@@ -10,30 +10,19 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="script.mjs"></script>
+    <script src="script.js"></script>
 
 </head>
 
 <body>
-    <!--<header>
-        <a href="index.html" class="logo">weCare</a>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="itens.html">Itens</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="cadastrolivro.html">Cadastro</a></li>
 
-        </ul>
-    </nav>-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">weCare</a>
 
             <form class="d-flex mx-auto">
-                <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+                <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar" id="pesq">
+                <button class="btn btn-outline-success search-btn" type="submit" id="search-btn" onclick="buscar()">Pesquisar</button>
             </form>
 
             <div class="navbar-nav ms-auto">
