--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="script.mjs" type="module"></script>
+    <script src="script.js" type="module"></script>
 
 </head>
 
