Inserção de usuarios

--- a/cadastro.html
+++ b/cadastro.html
@@ -48,7 +48,7 @@
     </nav>
         <div class="container mt-5">
             <h1 class="mb-4">Cadastro</h1>
-            <form  method="post" action="scripts/scriptbase.php">
+            <form  method="post" action="scripts/cadastro.php" method="post">
                 <div class="mb-3">
                     <label for="nome" class="form-label">Nome:</label>
                     <input type="text" class="form-control" id="nome" name="nome" maxlength="100">
@@ -86,7 +86,7 @@
                 </div>            
                 <div class="mb-3">
                     <label for="foto" class="form-label">Foto:</label>
-                    <input type="file" class="form-control" id="foto">
+                    <input type="file" class="form-control" id="foto" name="foto">
                 </div>
 
                 <div class="mb-3">
