Alteração de css, correção de pequenos bugs

--- a/cadastro.html
+++ b/cadastro.html
@@ -103,7 +103,7 @@
             </form>
     </main>
     <footer class="fixed-bottom">
-        <address>Todos os direitos reservados 2023</address>
+        Todos os direitos reservados 2023
     </footer>
 </body>
 
