--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
           <button class="btn btn-outline-success" type="submit">Pesquisar</button>
         </form>
-
         <div class="navbar-nav ms-auto">
           <a class="nav-link" id="buttonLogin" href="login.html"><i class="bi bi-person"></i> Login</a>
         </div>
@@ -102,7 +101,7 @@
   </main>
 
   <footer class="row">
-    <address>Todos os direitos reservados 2023</address>
+      Todos os direitos reservados 2023
   </footer>
 
 </body>
