--- a/sobre.html
+++ b/sobre.html
@@ -82,7 +82,7 @@
         
     </main>
     <footer class="fixed-bottom">
-        <address>Todos os direitos reservados 2023</address>
+        Todos os direitos reservados 2023
     </footer>
 </body>
 
